FindBugs system applied. It seems that ch7Alg34* and ch7alg35* stopped working.